# csv-wtf-tools

./: README.md  csv_wtf_basic.bat  pyproject.toml
src/csv_wtf_tools/: basic.py
